--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="keywords" content="Blog preview card, HTML, CSS">
+  <meta name="description" content="Custom card to show the qr code">
+  <meta name="author" content="Joao Ribeiro">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
